Hide drop down arrow

--- a/caliber/src/main/webapp/static/app/partials/panel/panelhome.html
+++ b/caliber/src/main/webapp/static/app/partials/panel/panelhome.html
@@ -16,7 +16,7 @@
 					</a></li>
 					<!-- Button Trigger for Import Batch Modal -->
 					<li class="pull-right">
-						<div class="container-1">
+						<div class="container-1 hideDropdown">
 							<form ng-submit="selectChosenTrainee()">
 								<span class="icon">
 									<button type="submit" class="SearchButton">
