--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -20,7 +20,7 @@
 			</div>
 			
 			<!-- Search for single Trainee -->
-			<div class="container-1 pull-right">
+			<div class="container-1 pull-right hideDropdown">
                 <form ng-submit="selectChosenTrainee()">
                     <span class="icon"><button type="submit" class="SearchButton"><i class="fa fa-search"></i></button></span>
                       <input ng-change="populateTraineeList()"
