overall batch status and Quality Audit Report modal match the bar chart, which is the last populated qc report added week number to Quality Audit Report Modal

--- a/caliber/src/main/webapp/static/app/partials/home/view-audit-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/home/view-audit-modal.html
@@ -10,8 +10,7 @@
 					aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
-				<h4 class="modal-title" id="traineeModalLabel">Quality Audit
-					Report</h4>
+				<h4 class="modal-title" id="traineeModalLabel">Quality Audit Report - Week {{displayWeek}}</h4>
 			</div>
 			<div class="modal-body">
 				<div class="col-sm-12 col-md-12 col-lg-12 top5">
