--- a/caliber/src/main/webapp/static/app/partials/home/vp-home.html
+++ b/caliber/src/main/webapp/static/app/partials/home/vp-home.html
@@ -56,7 +56,10 @@
 											<th class="col-sm-2 col-md-2 col-lg-2">{{label}}</th>
 											<td class="col-sm-2 col-md-2 col-lg-2"
 												ng-repeat="series in stackedBarSeries track by $index">{{stackedBarData[$index][$parent.$index]}}</td>
-											<td class="overall-batch-health" ng-init="getOverallBatchFeedbackMap()" ng-class="{'color-red': qcOverallNotes[stackedBarIds[$index]] === 'Poor', 'color-yellow': qcOverallNotes[stackedBarIds[$index]] === 'Average', 'color-green': qcOverallNotes[stackedBarIds[$index]] === 'Good'}">{{qcOverallNotes[stackedBarIds[$index]]}}</td>
+											<td class="overall-batch-health"
+												ng-class="{'color-red': {{'\'' + qcOverall + '\''}} === 'Poor', 'color-yellow': {{'\'' + qcOverall + '\''}} == 'Average', 'color-green': {{'\'' + qcOverall + '\''}} == 'Good'}">
+												{{qcOverall}}
+											</td>
 										</tr>
 									</tbody>
 								</table>
