--- a/caliber/src/main/webapp/static/app/partials/home/vp-home.html
+++ b/caliber/src/main/webapp/static/app/partials/home/vp-home.html
@@ -58,7 +58,7 @@
 												ng-repeat="series in stackedBarSeries track by $index">{{stackedBarData[$index][$parent.$index]}}</td>
 											<td class="overall-batch-health"
 												ng-class="{'color-red': {{'\'' + qcOverall + '\''}} === 'Poor', 'color-yellow': {{'\'' + qcOverall + '\''}} == 'Average', 'color-green': {{'\'' + qcOverall + '\''}} == 'Good'}">
-												{{qcOverall}}
+												{{ qcOverall != "Undefined" ? qcOverall : "-"}}
 											</td>
 										</tr>
 									</tbody>
