--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -254,6 +254,7 @@
 				<!-- CHRISTINE'S QC BATCH REPORT VIEW -->
 				<!-- ******************************************************************************************-->
 
+
 				<div class="row" ng-if="batchOverall">
 					<div class="col-sm-12 col-md-12 col-lg-12">
 						<div class="row">
@@ -264,26 +265,30 @@
 									</div>
 									<div class="panel-body">
 										<div class="table-responsive">
-											<!-- <table id="tableBorder" class="table table-bordered" style="border-collapse: collapse;">
-												<tr id="headBorder">
+											<table class="table table-bordered" style="border-collapse: collapse;">
+												<tr>
 													<th>Trainee</th>
-													<th class="text-center" ng-repeat="label in weeklyProgressBatchOverallLabels track by $index">Week {{label}}</th>
+													<th class="text-center" ng-repeat="week in currentBatchWeeks">Week {{week}}</th>
 												</tr>
-												<tr ng-repeat="item in allTraineesPanelData">
-													<td class="col-sm-3 col-md-3 col-lg-3" ng-bind="item.trainee"></td>
-													<td class="text-center" ng-repeat="label in weeklyProgressBatchOverallLabels track by $index">
-														<i class="fa fa-smile-o fa-2x pick"></i>
+												<tr ng-repeat="traineeInfo in allQCTraineeNotesAllWeeks">
+													<td class="col-sm-3 col-md-3 col-lg-3">{{traineeInfo[0].trainee.name}}</td>
+													<td class="text-center" ng-repeat="note in traineeInfo">  
+                                                        <div ng-if="note.qcStatus == 'Superstar'">
+                                                            <i class="fa fa-star fa-2x pick"></i>
+														</div>
+														<div ng-if="note.qcStatus == 'Good'">
+															<i class="fa fa-smile-o fa-2x pick"></i>
+														</div>
+														<div ng-if="note.qcStatus == 'Average'">
+															<i class="fa fa-meh-o fa-2x pick"></i>
+														</div>
+														<div ng-if="note.qcStatus == 'Poor'">
+															<i class="fa fa-frown-o fa-2x pick"></i>
+														</div>
 													</td>
 												</tr>
-												<tr id="overallRow">
-													<th class="col-sm-3 col-md-3 col-lg-3">Overall</th>
-													<td class="text-center" ng-repeat="label in weeklyProgressBatchOverallLabels track by $index">
-														<i class="fa fa-smile-o fa-2x pick"></i>
-													</td>
-												</tr>
-											</table> -->
-
-											<div ng-repeat="content in allQCTraineeNotesAllWeeks"></div>
+												<div ng-repeat="content in allQCTraineeNotesAllWeeks"></div>
+											</table>
 										</div>
 									</div>
 								</div>
