--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -287,7 +287,27 @@
 														</div>
 													</td>
 												</tr>
-												<div ng-repeat="content in allQCTraineeNotesAllWeeks"></div>
+												<tr id="overallRow">
+                                                    <th class="col-sm-3 col-md-3 col-lg-3">Overall</th>
+                                                    <td class="text-center" ng-repeat="note in batchQCNotes ">
+
+                                                        <div ng-if="note.qcStatus == 'Superstar'">
+                                                            <i class="fa fa-star fa-2x pick"></i>
+                                                        </div>
+                                                        <div ng-if="note.qcStatus == 'Good'">
+                                                            <i class="fa fa-smile-o fa-2x pick"></i>
+                                                        </div>
+                                                        <div ng-if="note.qcStatus == 'Average'">
+                                                            <i class="fa fa-meh-o fa-2x pick"></i>
+                                                        </div>
+                                                        <div ng-if="note.qcStatus == 'Poor'">
+                                                            <i class="fa fa-frown-o fa-2x pick"></i>
+                                                        </div>
+                                                        <div ng-if="note.qcStatus == null">
+                                                            <i class="fa fa-question-circle fa-2x pick"></i>
+                                                        </div>
+                                                    </td>
+                                                </tr>
 											</table>
 										</div>
 									</div>
