added styling for the overall batch qc status in reports.html

--- a/caliber/src/main/webapp/static/app/resources/css/app.css
+++ b/caliber/src/main/webapp/static/app/resources/css/app.css
@@ -443,6 +443,10 @@ footer a, footer a:hover {
 .fa-minus{
 	color: rgb(252,221,115);
 }
+
+#overallRow{
+    border-top-width: thick; 
+}
 /********************************************************
 	Panels table
 *********************************************************/
