--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -247,12 +247,8 @@
 					</div>
 				</div>
 
+				<!--  QC BATCH REPORT VIEW -->
 				<!-- ******************************************************************************************-->
-				<!-- testing in progress -->
-				<!-- CHRISTINE'S QC BATCH REPORT VIEW -->
-				<!-- ******************************************************************************************-->
-
-
 				<div class="row" ng-if="batchOverall">
 					<div class="col-sm-12 col-md-12 col-lg-12">
 						<div class="row">
@@ -263,10 +259,16 @@
 									</div>
 									<div class="panel-body">
 										<div class="table-responsive">
-											<table class="table table-bordered" style="border-collapse: collapse;">
+											<!-- This table displays if there is no QC status data. -->
+											<table ng-if="allQCTraineeNotesAllWeeks.length == 0" class="table table-bordered" style="border-collapse: collapse;">
+												<tr>
+													<th class="text-center">No QC data available at this time.</th>
+												</tr>
+											</table>
+											<table ng-if="allQCTraineeNotesAllWeeks.length !== 0" class="table table-bordered" style="border-collapse: collapse;">
 												<tr>
 													<th>Trainee</th>
-													<th class="text-center" ng-repeat="week in currentBatchWeeks">Week {{week}}</th>
+													<th class="text-center" ng-repeat="item in allQCTraineeNotesAllWeeks[0]">Week {{item.week}}</th>
 												</tr>
 												<tr ng-repeat="traineeInfo in allQCTraineeNotesAllWeeks">
 													<td class="col-sm-3 col-md-3 col-lg-3">{{traineeInfo[0].trainee.name}}</td>
@@ -315,8 +317,7 @@
 					</div>
 				</div>
 			</div>
-			<!-- END TESTING FOR CHRISTINE-->
-			<!-- end testing in progress-->
+
 			<!-- ****************************************************************************************** -->
 
 			<div class="row">
