--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -656,7 +656,7 @@
 
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal">&times;</button>
-				<h4 class="modal-title text-center">{{person}} - Week {{week}} Notes </h4>
+				<h4 class="modal-title">{{person}} - Week {{week}} Notes </h4>
 			</div>
 			<div class="modal-body" ng-bind="individualNote">
 				<p>{{individualNote}}</p>
@@ -676,7 +676,7 @@
 
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal">&times;</button>
-				<h4 class="modal-title text-center">Batch Overall Notes - Week {{overallBatchWeek}}  </h4>
+				<h4 class="modal-title">Batch Overall Notes - Week {{overallBatchWeek}}  </h4>
 			</div>
 			<div class="modal-body" ng-bind="batchNote">
 				<p>{{batchNote}}</p>
