the overall batch notes modal is now dispalying the the correct notes and week number

--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -274,7 +274,7 @@
 													<td class="col-sm-3 col-md-3 col-lg-3">{{traineeInfo[0].trainee.name}}</td>
 													<td class="text-center " ng-repeat="status in traineeInfo">
 														<div ng-if="status.qcStatus == 'Superstar'" id="{{traineeInfo[0].trainee.name}}" value="{{status.noteId}}">
-															<a ng-click="populateModal(traineeInfo[0].trainee.name,status.noteId)" data-toggle="modal" data-target="#notesModal" class="fa fa-star fa-2x pick mouse-over"></a>
+															<a ng-click="populateModal(traineeInfo[0].trainee.name,status.noteId, )" data-toggle="modal" data-target="#notesModal" class="fa fa-star fa-2x pick mouse-over"></a>
 														</div>
 														<div ng-if="status.qcStatus == 'Good'" id="{{traineeInfo[0].trainee.name}}" value="{{status.noteId}}">
 															<a ng-click="populateModal(traineeInfo[0].trainee.name,status.noteId)" data-toggle="modal" data-target="#notesModal" class="fa fa-smile-o fa-2x pick mouse-over"></a>
@@ -295,19 +295,19 @@
 													<td class="text-center" ng-repeat="note in batchQCNotes">
 
 														<div ng-if="note.qcStatus == 'Superstar'">
-															<a ng-click="populateOverallModal(note.noteId)" data-toggle="modal" data-target="#batchOverallModal" class="fa fa-star fa-2x pick mouse-over"></a>
+															<a ng-click="populateOverallModal(note)" data-toggle="modal" data-target="#batchOverallModal" class="fa fa-star fa-2x pick mouse-over"></a>
 														</div>
 														<div ng-if="note.qcStatus == 'Good'">
-															<a ng-click="populateOverallModal(note.noteId)" data-toggle="modal" data-target="#batchOverallModal" class="fa fa-smile-o fa-2x pick mouse-over"></a>
+															<a ng-click="populateOverallModal(note)" data-toggle="modal" data-target="#batchOverallModal" class="fa fa-smile-o fa-2x pick mouse-over"></a>
 														</div>
 														<div ng-if="note.qcStatus == 'Average'">
-															<a ng-click="populateOverallModal(note.noteId)" data-toggle="modal" data-target="#batchOverallModal" class="fa fa-meh-o fa-2x pick mouse-over"></a>
+															<a ng-click="populateOverallModal(note)" data-toggle="modal" data-target="#batchOverallModal" class="fa fa-meh-o fa-2x pick mouse-over"></a>
 														</div>
 														<div ng-if="note.qcStatus == 'Poor'">
-															<a ng-click="populateOverallModal(note.noteId)" data-toggle="modal" data-target="#batchOverallModal" class="fa fa-frown-o fa-2x pick mouse-over"></a>
+															<a ng-click="populateOverallModal(note)" data-toggle="modal" data-target="#batchOverallModal" class="fa fa-frown-o fa-2x pick mouse-over"></a>
 														</div>
 														<div ng-if="note.qcStatus == null || note.qcStatus == 'Undefined'">
-															<a ng-click="populateOverallModal(note.noteId)" data-toggle="modal" data-target="#batchOverallModal" class="fa fa-question-circle fa-2x pick mouse-over"></a>
+															<a ng-click="populateOverallModal(note)" data-toggle="modal" data-target="#batchOverallModal" class="fa fa-question-circle fa-2x pick mouse-over"></a>
 														</div>
 													</td>
 												</tr>
