--- a/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
+++ b/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
@@ -29,6 +29,12 @@
 								{{batch.trainer.name}} - {{batch.startDate | date:'shortDate'}}
 						</a></li>
 					</ul></li>
+				<!-- Button Trigger for Import Grades Modal -->
+				<li role="button" class="pull-right" ng-show="!noBatches"
+					data-toggle="modal" data-target="#importGradesModal"><a>Import
+						Grades <span class="glyphicon glyphicon-download"
+						aria-hidden="true"> </span>
+				</a></li>
 				<!-- Button Trigger for Create Assessment Modal -->
 				<li role="button" class="pull-right" ng-show="!noBatches"
 					data-toggle="modal" data-target="#createAssessmentModal"><a>Create
@@ -69,7 +75,8 @@
 		</div>
 	</div>
 	<!-- If no data display below text -->
-	<div class="bg-primary align center" ng-if="!currentBatch">No data available for {{ selectedYear }}.</div>
+	<div class="bg-primary align center" ng-if="!currentBatch">No
+		data available for {{ selectedYear }}.</div>
 </div>
 <!-- Assessments table -->
 <div class="container" id="trainer-assess-table" ng-if="currentBatch">
@@ -89,7 +96,8 @@
 								<th class="col-sm-1 col-md-1 col-lg-1"></th>
 								<div>
 									<th class="col-sm-1 col-md-1 col-lg-1 text-center"
-										role="button" data-toggle="modal" data-ng-click="setUpdateAssessmentToCurrent($index)"
+										role="button" data-toggle="modal"
+										data-ng-click="setUpdateAssessmentToCurrent($index)"
 										data-target="#editAssessmentModal_{{assessment.assessmentId}}"
 										ng-repeat="assessment in currentAssessments track by $index">
 										{{assessment.title}}
@@ -101,23 +109,27 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr role="button";
+							<tr role="button"
+								;
 								ng-repeat="trainee in currentBatch.trainees track by $index">
 								<ng-form name="gradeFieldForm">
-								<td class="col-sm-2 col-md-2 col-lg-2" ng-click="toggleColor(trainee, $index)">{{ trainee.name }}</td>
-								<td class="col-sm-1 col-md-1 col-lg-1"><span ng-mouseover="showNotes($index)" ng-mouseleave="hideNotes($index)" 
- 								ng-init="init(trainee, $index)" class="glyphicon glyphicon-flag"></span>
-									<form class="commentForm" ng-submit="updateFlag(trainee, $index)"
-										style="display: none;">
+								<td class="col-sm-2 col-md-2 col-lg-2"
+									ng-click="toggleColor(trainee, $index)">{{ trainee.name }}</td>
+								<td class="col-sm-1 col-md-1 col-lg-1"><span
+									ng-mouseover="showNotes($index)"
+									ng-mouseleave="hideNotes($index)"
+									ng-init="init(trainee, $index)"
+									class="glyphicon glyphicon-flag"></span>
+									<form class="commentForm"
+										ng-submit="updateFlag(trainee, $index)" style="display: none;">
 										<input type="text" placeholder="comment" name="statusComment"
 											ng-model="trainee.flagNotes"> <input type="submit"
 											value="Save"> <span ng-click="closeComment()"
 											class="glyphicon glyphicon-remove-sign"></span>
 									</form>
-									<div style="display:none" class="notes">
- 										<span>{{trainee.flagNotes}}</span>
- 									</div>
-									</td>
+									<div style="display: none" class="notes">
+										<span>{{trainee.flagNotes}}</span>
+									</div></td>
 								<td class="text-center col-sm-1 col-md-1 col-lg-1"
 									ng-repeat="assessment in currentAssessments track by $index">
 									<input
@@ -239,4 +251,70 @@
 		</div>
 	</div>
 </div>
+
+<!-- Import Grades Modal -->
+<div class="modal fade" id="importGradesModal" tabindex="-1"
+	role="dialog" aria-labelledby="myModalLabel">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal"
+					aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+
+				<h4 class="modal-title" id="myModalLabel">Import Grades</h4>
+			</div>
+			<!-- Add Grade Json -->
+			<form ng-submit="importGrade()">
+				<div class="modal-body">
+					<div class="row">
+						<div class="form-group col-md-12 col-sm-12"
+							style="text-align: left">
+							<label>Please paste in your exported JSON data from
+								RevaturePro.</label>
+						</div>
+					</div>
+					<div class="row">
+						<div class="form-group col-md-12 col-sm-12"
+							style="text-align: left">
+						<textarea placeholder="Quiz Data" cols="75" rows="10" ng-model="quiz.data"></textarea>
+						</div>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<input type="submit" value="Save" class="btn btn-primary">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
+
+<!-- 		Import Grade Error Modal	 -->
+<div class="modal fade" id="importGradeErrorModal" tabindex="-1"
+	role="dialog" aria-labelledby="importGradeLabel">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal"
+					aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				<h4 class="modal-title" id="importGradeErrorModalLabel">
+					Error &nbsp;<i class="fa fa-frown-o fa-2x pick" aria-hidden="true"></i>
+				</h4>
+			</div>
+			<div class="modal-body">
+				{{ importGradeError }}<br />
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+			</div>
+		</div>
+
+	</div>
+
+</div>
+
 <div ui-view="confirm-add-weeks-modal"></div>
