--- a/caliber/src/main/webapp/static/app/partials/manage/import-batch-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/import-batch-modal.html
@@ -44,8 +44,8 @@
 						<!-- Dropdown for location -->
 						<div class="form-group col-md-6 col-sm-6">
 							<label for="commonLocations">Location :</label>
-							<!-- ng-options is used ass opposed to ng-repeat because an entire object needs to be passed -->
-							<select ng-model="location.model" id="location" required
+							<!-- ng-options is used as opposed to ng-repeat because an entire object needs to be passed -->
+							<select ng-model="batchToImport.address" id="location" required
 								class="form-control" ng-required="true"
 								ng-options="option as (option.company + ', ' + option.street + ' ' + option.city + ' ' + option.state + ' ' + option.zipcode) group by option.state for option in (location.options | orderBy:['state','company']  | filter : {active:true})  track by option.addressId">
 								<option value="" value="">Select Location</option>
