switch batches feature and dropped trainee sync

--- a/caliber/src/main/webapp/static/app/partials/manage/view-trainees-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/view-trainees-modal.html
@@ -34,7 +34,7 @@
 				<div class="col-md-12 col-lg-12">
 
 					<div class="modal-body">
-						<div class="container modal-widest" >
+						<div class="container modal-widest">
 							<a role="button" class="pull-right"
 								ng-click="resetTraineeForm();" data-toggle="modal"
 								data-target="#addTraineeModal" type="button">Add Trainee<span
@@ -59,27 +59,30 @@
 									<th>Project Completion</th>
 									<th></th>
 									<th></th>
+									<th></th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr ng-repeat="trainee in trainees">
 									<td role="button" ng-click="toggleColor(trainee, $index)">{{trainee.name}}</td>
-									<td><span ng-mouseover="showNotes($index)" ng-mouseleave="hideNotes($index)"
- 									ng-init="initFlags(trainee, $index)" class="glyphicon glyphicon-flag"></span>
-									<form ng-if="showCommentForm[$index]" class="commentForm"
-										ng-submit="updateFlag(trainee, $index)"
-										style="display: inline-block; position: absolute; padding: 5px; border-radius: 5px; margin-left: 5px; background-color: white; border: solid #ccc 1px; z-index: 1">
-										<input type="text" placeholder="comment" name="statusComment"
-											ng-model="trainee.flagNotes"> <input type="submit"
-											value="Save"> <span ng-click="closeComment()"
-											class="glyphicon glyphicon-remove-sign"></span>
-									</form>
-									<div ng-if="showCommentBox[$index] && currentBatch.trainees[$index].flagNotes"
-										style="z-index: 1; display: inline-block; position: absolute; padding: 5px; border: 1px solid #CCC; border-radius: 5px; background-color: white"
-										class="notes">
-										<span>{{trainee.flagNotes}}</span>
-									</div>
-									</td>
+									<td><span ng-mouseover="showNotes($index)"
+										ng-mouseleave="hideNotes($index)"
+										ng-init="initFlags(trainee, $index)"
+										class="glyphicon glyphicon-flag"></span>
+										<form ng-if="showCommentForm[$index]" class="commentForm"
+											ng-submit="updateFlag(trainee, $index)"
+											style="display: inline-block; position: absolute; padding: 5px; border-radius: 5px; margin-left: 5px; background-color: white; border: solid #ccc 1px; z-index: 1">
+											<input type="text" placeholder="comment" name="statusComment"
+												ng-model="trainee.flagNotes"> <input type="submit"
+												value="Save"> <span ng-click="closeComment()"
+												class="glyphicon glyphicon-remove-sign"></span>
+										</form>
+										<div
+											ng-if="showCommentBox[$index] && currentBatch.trainees[$index].flagNotes"
+											style="z-index: 1; display: inline-block; position: absolute; padding: 5px; border: 1px solid #CCC; border-radius: 5px; background-color: white"
+											class="notes">
+											<span>{{trainee.flagNotes}}</span>
+										</div></td>
 									<td>{{trainee.email}}</td>
 									<td>{{trainee.trainingStatus}}</td>
 									<td>{{trainee.phoneNumber}}</td>
@@ -95,6 +98,13 @@
 									<td>{{trainee.techScreenerName}}</td>
 									<td>{{trainee.projectCompletion}}</td>
 
+									<td>
+										<!-- Change Batches Modal --> <a role="button"
+										data-toggle="modal"
+										ng-click="getSwitchableBatches(trainee)"
+										data-target="#switchBatchModal"><span
+											class="glyphicon glyphicon-refresh"></span> </a>
+									</td>
 
 									<td><a role="button"
 										ng-click="populateTrainee(trainee);getTrainee($index)"
