panel search performance fix

--- a/caliber/src/main/webapp/static/app/partials/panel/panelhome.html
+++ b/caliber/src/main/webapp/static/app/partials/panel/panelhome.html
@@ -25,7 +25,7 @@
 								</span> 
 								<input ng-change="populateTraineeList()"
 									ng-model="chosenTrainee" list="traineeList" type="search"
-									id="searchTextBox" placeholder="Search..."
+									id="searchTextBox" placeholder="Paste Email"
 									class="form-control SearchPad" autocomplete="off" />
 								<datalist id="traineeList">
 									<option ng-repeat="trainee in employedTrainees track by $index"
