--- a/caliber/src/main/webapp/static/app/partials/panel/panelmodal.html
+++ b/caliber/src/main/webapp/static/app/partials/panel/panelmodal.html
@@ -75,7 +75,7 @@
                                 	<td><input type="text" ng-model="p3Expl.model" class="form-control" id="generalFeedback.p3expl"></td>
                             	</tr>
                             	<tr>
-                                	<td><b>Communication Skills</b></td>
+                                	<td><b>Soft Skills</b></td>
                                 	<td><input type="text" ng-model="communicationSkills.model" class="form-control" id="generalFeedback.commskills"></td>
                             	</tr>
                         	</table>
