--- a/caliber/src/main/webapp/static/app/partials/panel/panelhome.html
+++ b/caliber/src/main/webapp/static/app/partials/panel/panelhome.html
@@ -9,10 +9,10 @@
 				<ul class="nav nav-tabs">
 
 					<!-- Button Trigger for Create Panel Modal -->
-					<li role="button" class="pull-right" data-toggle="{{ trainee.name ? 'modal' : '' }}"
-						data-target="#panelmodal" ng-click=""><a>Create
-							Panel<span class="glyphicon glyphicon-plus" aria-hidden="true">
-						</span>
+					<li role="button" class="pull-right"
+						data-toggle="{{ trainee.name ? 'modal' : '' }}"
+						data-target="#panelmodal" ng-click=""><a>Create Panel<span
+							class="glyphicon glyphicon-plus" aria-hidden="true"> </span>
 					</a></li>
 					<!-- Button Trigger for Import Batch Modal -->
 					<li class="pull-right">
@@ -22,24 +22,24 @@
 									<button type="submit" class="SearchButton">
 										<i class="fa fa-search"></i>
 									</button>
-								</span> 
-								<input ng-change="populateTraineeList()"
+								</span> <input ng-change="populateTraineeList()"
 									ng-model="chosenTrainee" list="traineeList" type="search"
 									id="searchTextBox" placeholder="Paste Email"
 									class="form-control SearchPad" autocomplete="off" />
 								<datalist id="traineeList">
 									<option ng-repeat="trainee in employedTrainees track by $index"
 										ng-value="trainee.name" ng-if="chosenTrainee.length>0">
-	    								{{trainee.name}} | {{trainee.email}} | {{trainee.skypeId}} 
-	    							</option>
+										{{trainee.name}} | {{trainee.email}} | {{trainee.skypeId}}</option>
 								</datalist>
 							</form>
 						</div>
 					</li>
 				</ul>
-				
-				<div class="alert alert-danger fade-speeder" ng-fade="true" ng-if="showMessage" ng-model="errorMessage" ng-bind="errorMessage + trainee.name"></div>
-				
+
+				<div class="alert alert-danger fade-speeder" ng-fade="true"
+					ng-if="showMessage" ng-model="errorMessage"
+					ng-bind="errorMessage + trainee.name"></div>
+
 				<div class="panel panel-default" style="margin-top: 20px">
 					<div class="panel-heading">Panel Feedback</div>
 					<div class="panel-body">
@@ -56,8 +56,8 @@
 									</tr>
 								</thead>
 								<tbody>
-								<tr ng-class="{ highlight: item.id === newPanel.id }"
-									ng-repeat="item in traineePanels">
+									<tr ng-class="{ highlight: item.id === newPanel.id }"
+										ng-repeat="item in traineePanels">
 										<td ng-bind="item.trainee.name" id="trainee.name"></td>
 										<!-- THESE MIGHT NOT EXIST YET -->
 										<td ng-bind="item.interviewDate"></td>
@@ -68,16 +68,20 @@
 										<td ng-if="item.status=='Repanel'"><span
 											style="color: #ff7575; width: 100%; text-align: center;"
 											class="glyphicon glyphicon-remove fa-2x"></span></td>
-										<td style="text-align: center;height:auto">
-											<b><span ng-repeat="option in item.feedback"
-											ng-if="option.status == 'Repanel'" ng-bind="option.technology.skillCategory" style="display:block"></span></b>
-											<span ng-if="item.status!='Repanel'" style="color: rgb(252, 221, 115); width: 100%; text-align: center;"
-											class="fa fa-minus fa-2x"></span>
-										</td>
+										<td style="text-align: center; height: auto"><b><span
+												ng-repeat="option in item.feedback"
+												ng-if="option.status == 'Repanel'"
+												ng-bind="option.technology.skillCategory"
+												style="display: block"></span></b> <span
+											ng-if="item.status!='Repanel'"
+											style="color: rgb(252, 221, 115); width: 100%; text-align: center;"
+											class="fa fa-minus fa-2x"></span></td>
 									</tr>
 								</tbody>
 							</table>
-							<div class="bg-primary align center" ng-if="!traineePanels && traineePanels.length === 0">This is {{trainee.name}}'s first panel!.</div>
+							<div class="bg-primary align center"
+								ng-if="!traineePanels && traineePanels.length === 0">This
+								is {{trainee.name}}'s first panel.</div>
 						</div>
 					</div>
 				</div>
